Added app images and linked to the app store, as well as profile image

--- a/index.html
+++ b/index.html
@@ -36,44 +36,73 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
+						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=com.tvguidemobile">
+								<img src="images/tvguide.jpg" alt="" />
+							</a>
+						</div>
 						<div class="content">
-							<h3>Magna sed ultrices</h3>
+							<h3>TV Guide</h3>
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
+						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.cnet">
+								<img src="images/cnet.jpg" alt="" />
+							</a></div>
 						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
+							<h3>CNET</h3>
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.gamespot.tt&hl=en_GB&gl=US">
+								<img src="images/gamespot.jpg" alt="" />
+							</a></div>
 						<div class="content">
-							<h3>Aliquam sed magna</h3>
+							<h3>GameSpot Now</h3>
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.techtoday&hl=en_GB&gl=US">
+								<img src="images/techtoday.jpg" alt="" />
+							</a></div>
 						<div class="content">
-							<h3>Aliquam sed magna</h3>
+							<h3>CNET: Tech Today</h3>
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=green.chargedup&hl=en_GB">
+								<img src="images/chargedup.jpg" alt="" />
+							</a></div>
 						<div class="content">
-							<h3>Aliquam sed magna</h3>
+							<h3>ChargedUp</h3>
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=uk.co.hiyacar&hl=en_GB">
+								<img src="images/hiyacar.jpg" alt="" />
+							</a></div>
 						<div class="content">
-							<h3>Aliquam sed magna</h3>
+							<h3>hiyacar</h3>
+							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+						</div>
+					</section>
+					<section class="spotlight">
+						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=com.mumsnet.talk&hl=en_GB">
+								<img src="images/mumsnet.jpg" alt="" />
+							</a></div>
+						<div class="content">
+							<h3>Mumsnet</h3>
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
 						</div>
 					</section>
