Added content and changed colour scheme of website

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 							</a>
 						</div>
 						<div class="content">
-							<h3>TV Guide</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<a href="https://play.google.com/store/apps/details?id=com.tvguidemobile"><h3>TV Guide</h3></a>
+							<h4>Product Description</h4>
+							<p>TV Guide is the place to go for finding what to watch and where to watch it. Any show, any movie — on live TV or streaming — the TV Guide app puts it all in the palm of your hand.</p>
+							<p>Tech stack: Ktor, Coroutines, Kotlin, Dagger2/Hilt, Flows, Jetpack Compose, XML, MVVM, Kotlin Multiplatform, Kodein Databases</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -52,8 +54,10 @@
 								<img src="images/cnet.jpg" alt="" />
 							</a></div>
 						<div class="content">
-							<h3>CNET</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.cnet"><h3>CNET</h3></a>
+							<h4>Product Description</h4>
+							<p>CNET is the No. 1 source for tech news and reviews and puts the biggest stories of the day and expert advice on the products you need to own, right in the palm of your hand.</p>
+							<p>Tech stack: Retrofit, Kotlin, Dagger2, XML, MVVM, Realm Databases</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -62,8 +66,10 @@
 								<img src="images/gamespot.jpg" alt="" />
 							</a></div>
 						<div class="content">
-							<h3>GameSpot Now</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.gamespot.tt&hl=en_GB&gl=US"><h3>GameSpot Now</h3></a>
+							<h4>Product Description</h4>
+							<p>GameSpot Now delivers the most important and recent gaming and entertainment news, reviews and opinions, all in one easy daily dose. The app has GameSpot’s 10 biggest stories of the day at the tip of your fingers.</p>
+							<p>Tech stack: Retrofit, Kotlin, Dagger2, XML, MVVM, Realm Databases</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -72,8 +78,10 @@
 								<img src="images/techtoday.jpg" alt="" />
 							</a></div>
 						<div class="content">
-							<h3>CNET: Tech Today</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.techtoday&hl=en_GB&gl=US"><h3>CNET: Tech Today</h3></a>
+							<h4>Product Description</h4>
+							<p>Tech Today delivers the most important tech news, stories and opinions, all in one easy daily dose. Whenever you have a couple minutes, the app has CNET's 10 biggest stories of the day waiting for you.</p>
+							<p>Tech stack: Retrofit, Kotlin, Dagger2, XML, MVVM, Realm Databases</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -82,8 +90,10 @@
 								<img src="images/chargedup.jpg" alt="" />
 							</a></div>
 						<div class="content">
-							<h3>ChargedUp</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<a href="https://play.google.com/store/apps/details?id=green.chargedup&hl=en_GB"><h3>ChargedUp</h3></a>
+							<h4>Product Description</h4>
+							<p>Ever found yourself out and about desperately looking to charge your phone? We’ve all been there and it sucks! Never have to worry about your phone dying again. ChargedUp is there when you need it; rent a power bank and you can take it with you to return at over 2000 stations across Europe!</p>
+							<p>Tech stack: Retrofit, Kotlin, XML, MVP, Coroutines</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -92,8 +102,10 @@
 								<img src="images/hiyacar.jpg" alt="" />
 							</a></div>
 						<div class="content">
-							<h3>hiyacar</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<a href="https://play.google.com/store/apps/details?id=uk.co.hiyacar&hl=en_GB"><h3>hiyacar</h3></a>
+							<h4>Product Description</h4>
+							<p>hiyacar enables hassle-free peer to peer car rental in London and the UK. With the hiyacar car hire app, drivers can sign up, search for cars around their area and make bookings while car owners can list their cars for free and manage bookings. Think of it as the Airbnb of cars.</p>
+							<p>Tech stack: Retrofit, Kotlin, XML, MVP, RxJava2</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -102,8 +114,10 @@
 								<img src="images/mumsnet.jpg" alt="" />
 							</a></div>
 						<div class="content">
-							<h3>Mumsnet</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<a href="https://play.google.com/store/apps/details?id=com.mumsnet.talk&hl=en_GB"><h3>Mumsnet</h3></a>
+							<h4>Product Description</h4>
+							<p>Mumsnet is the UK’s most popular website for parents. Be part of the conversation as it happens, no matter where you are or what time it is, with our Talk app for Android.</p>
+							<p>Tech stack: Retrofit, Kotlin, Java, XML</p>
 						</div>
 					</section>
 				</div>
