--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
 				<div class="inner alt">
 					<section class="spotlight">
 						<div class="image">
+							<a href="https://play.google.com/store/apps/details?id=com.nyoum.android.love">
+								<img src="images/love.jpg" alt="" />
+							</a></div>
+						<div class="content">
+							<a href="https://play.google.com/store/apps/details?id=com.nyoum.android.love"><h3>LOVE</h3></a>
+							<h4>Product Description</h4>
+							<p>LOVE is a brand new way to communicate face-to-face with those closest to you. Video and audio messaging, video calling and more. No ads. No likes. Just a place where you can be unapologetically you.</p>
+							<p>Tech stack: Retrofit, Kotlin, Dagger2, XML, MVVM, Realm Databases, DataStore, coqui-ai, MLKit</p>
+						</div>
+					</section>
+					<section class="spotlight">
+						<div class="image">
 							<a href="https://play.google.com/store/apps/details?id=com.tvguidemobile">
 								<img src="images/tvguide.jpg" alt="" />
 							</a>
