--- a/index.html
+++ b/index.html
@@ -46,200 +46,7 @@
 				</header>
 
 				<div class="project-grid">
-					<!-- Project 1: Checkatrade -->
-					<article class="project-card fade-in">
-						<div class="card-header">
-							<div class="card-meta">
-								<svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
-									<line x1="12" y1="18" x2="12.01" y2="18"></line>
-								</svg>
-								<span class="card-category">ANDROID</span>
-							</div>
-							<a href="#" class="card-link" aria-label="View project">
-								<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-									<polyline points="15 3 21 3 21 9"></polyline>
-									<line x1="10" y1="14" x2="21" y2="3"></line>
-								</svg>
-							</a>
-						</div>
-						<h3 class="card-title">Checkatrade Consumer</h3>
-						<p class="card-description">Home improvement app connecting users with 100k+ vetted tradespeople for trusted home services.</p>
-						<div class="card-tags">
-							<span class="tag">Kotlin</span>
-							<span class="tag">Jetpack Compose</span>
-							<span class="tag">MVVM</span>
-							<span class="tag">Coroutines</span>
-						</div>
-					</article>
-
-					<!-- Project 2: TradeMore -->
-					<article class="project-card fade-in">
-						<div class="card-header">
-							<div class="card-meta">
-								<svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
-									<line x1="12" y1="18" x2="12.01" y2="18"></line>
-								</svg>
-								<span class="card-category">ANDROID</span>
-							</div>
-							<a href="#" class="card-link" aria-label="View project">
-								<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-									<polyline points="15 3 21 3 21 9"></polyline>
-									<line x1="10" y1="14" x2="21" y2="3"></line>
-								</svg>
-							</a>
-						</div>
-						<h3 class="card-title">TradeMore</h3>
-						<p class="card-description">AI-powered job management platform helping tradespeople streamline their business operations.</p>
-						<div class="card-tags">
-							<span class="tag">Kotlin</span>
-							<span class="tag">AI Integration</span>
-							<span class="tag">Material Design 3</span>
-						</div>
-					</article>
-
-					<!-- Project 3: ComplyCube SDK -->
-					<article class="project-card fade-in">
-						<div class="card-header">
-							<div class="card-meta">
-								<svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<circle cx="12" cy="12" r="10"></circle>
-									<line x1="2" y1="12" x2="22" y2="12"></line>
-									<path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
-								</svg>
-								<span class="card-category">SDK</span>
-							</div>
-							<a href="#" class="card-link" aria-label="View project">
-								<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-									<polyline points="15 3 21 3 21 9"></polyline>
-									<line x1="10" y1="14" x2="21" y2="3"></line>
-								</svg>
-							</a>
-						</div>
-						<h3 class="card-title">ComplyCube SDK</h3>
-						<p class="card-description">Identity verification & KYC/AML compliance SDK with PAD Level 2 liveness detection for secure authentication.</p>
-						<div class="card-tags">
-							<span class="tag">Kotlin</span>
-							<span class="tag">Camera2 API</span>
-							<span class="tag">ML Kit</span>
-							<span class="tag">SDK Development</span>
-						</div>
-					</article>
-
-					<!-- Project 4: NYOUM (Love) -->
-					<article class="project-card fade-in">
-						<div class="card-header">
-							<div class="card-meta">
-								<svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
-									<line x1="12" y1="18" x2="12.01" y2="18"></line>
-								</svg>
-								<span class="card-category">ANDROID</span>
-							</div>
-							<a href="https://play.google.com/store/apps/details?id=com.nyoum.android.love" class="card-link" aria-label="View project">
-								<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-									<polyline points="15 3 21 3 21 9"></polyline>
-									<line x1="10" y1="14" x2="21" y2="3"></line>
-								</svg>
-							</a>
-						</div>
-						<h3 class="card-title">NYOUM (Love)</h3>
-						<p class="card-description">Privacy-first AI communication platform featuring real-time transcription and intelligent assistance.</p>
-						<div class="card-tags">
-							<span class="tag">Kotlin</span>
-							<span class="tag">WebRTC</span>
-							<span class="tag">AI/ML</span>
-							<span class="tag">Real-time Processing</span>
-						</div>
-					</article>
-
-					<!-- Project 5: TV Guide -->
-					<article class="project-card fade-in">
-						<div class="card-header">
-							<div class="card-meta">
-								<svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
-									<line x1="12" y1="18" x2="12.01" y2="18"></line>
-								</svg>
-								<span class="card-category">ANDROID</span>
-							</div>
-							<a href="https://play.google.com/store/apps/details?id=com.tvguidemobile" class="card-link" aria-label="View project">
-								<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-									<polyline points="15 3 21 3 21 9"></polyline>
-									<line x1="10" y1="14" x2="21" y2="3"></line>
-								</svg>
-							</a>
-						</div>
-						<h3 class="card-title">TV Guide Mobile</h3>
-						<p class="card-description">Entertainment discovery app for live TV and streaming with 1M+ active users worldwide.</p>
-						<div class="card-tags">
-							<span class="tag">Java</span>
-							<span class="tag">Kotlin</span>
-							<span class="tag">ExoPlayer</span>
-							<span class="tag">REST APIs</span>
-						</div>
-					</article>
-
-					<!-- Project 6: CNET -->
-					<article class="project-card fade-in">
-						<div class="card-header">
-							<div class="card-meta">
-								<svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
-									<line x1="12" y1="18" x2="12.01" y2="18"></line>
-								</svg>
-								<span class="card-category">ANDROID</span>
-							</div>
-							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.cnet" class="card-link" aria-label="View project">
-								<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-									<polyline points="15 3 21 3 21 9"></polyline>
-									<line x1="10" y1="14" x2="21" y2="3"></line>
-								</svg>
-							</a>
-						</div>
-						<h3 class="card-title">CNET</h3>
-						<p class="card-description">#1 tech news and product review platform delivering trusted technology insights to millions.</p>
-						<div class="card-tags">
-							<span class="tag">Kotlin</span>
-							<span class="tag">Retrofit</span>
-							<span class="tag">Room</span>
-							<span class="tag">Material Design</span>
-						</div>
-					</article>
-
-					<!-- Project 7: GameSpot -->
-					<article class="project-card fade-in">
-						<div class="card-header">
-							<div class="card-meta">
-								<svg class="card-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
-									<line x1="12" y1="18" x2="12.01" y2="18"></line>
-								</svg>
-								<span class="card-category">ANDROID</span>
-							</div>
-							<a href="https://play.google.com/store/apps/details?id=com.cbsinteractive.gamespot.tt" class="card-link" aria-label="View project">
-								<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-									<path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-									<polyline points="15 3 21 3 21 9"></polyline>
-									<line x1="10" y1="14" x2="21" y2="3"></line>
-								</svg>
-							</a>
-						</div>
-						<h3 class="card-title">GameSpot</h3>
-						<p class="card-description">Premier gaming news and reviews platform keeping gamers informed with the latest industry coverage.</p>
-						<div class="card-tags">
-							<span class="tag">Kotlin</span>
-							<span class="tag">Retrofit</span>
-							<span class="tag">MVVM</span>
-						</div>
-					</article>
+					<!-- Projects will be dynamically populated from projects-data.js -->
 				</div>
 			</div>
 		</section>
@@ -256,37 +63,37 @@
 					<article class="blog-card fade-in">
 						<div class="blog-meta">
 							<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-								<path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-								<path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+								<circle cx="12" cy="12" r="10"></circle>
+								<polyline points="12 6 12 12 16 14"></polyline>
 							</svg>
-							<span>LATEST ON MEDIUM</span>
+							<span>Loading...</span>
 						</div>
-						<h3 class="blog-title">Building Scalable Android Applications</h3>
-						<p class="blog-description">Best practices and architectural patterns for creating maintainable Android apps that scale with your team and user base.</p>
+						<h3 class="blog-title">So, You Want to Be an AI Whisperer? A Guide to Mastering AGENTS.md</h3>
+						<p class="blog-description">In my last post, I got a little emotional. I talked about how AI Agents didn't just help me code — they basically saved my developmental life...</p>
 					</article>
 
 					<article class="blog-card fade-in">
 						<div class="blog-meta">
 							<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-								<path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-								<path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+								<circle cx="12" cy="12" r="10"></circle>
+								<polyline points="12 6 12 12 16 14"></polyline>
 							</svg>
-							<span>LATEST ON MEDIUM</span>
+							<span>Loading...</span>
 						</div>
-						<h3 class="blog-title">Jetpack Compose Deep Dive</h3>
-						<p class="blog-description">Exploring the declarative UI toolkit that's transforming Android development and how to make the most of it.</p>
+						<h3 class="blog-title">How AI Agents Saved My (Developmental) Life</h3>
+						<p class="blog-description">Or: How I Learned to Stop Worrying and Embrace the AI Assistant...</p>
 					</article>
 
 					<article class="blog-card fade-in">
 						<div class="blog-meta">
 							<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-								<path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-								<path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+								<circle cx="12" cy="12" r="10"></circle>
+								<polyline points="12 6 12 12 16 14"></polyline>
 							</svg>
-							<span>LATEST ON MEDIUM</span>
+							<span>Loading...</span>
 						</div>
-						<h3 class="blog-title">Clean Architecture in Practice</h3>
-						<p class="blog-description">Real-world implementation of clean architecture principles in Android projects with Kotlin and modern libraries.</p>
+						<h3 class="blog-title">Loading latest post...</h3>
+						<p class="blog-description">Fetching the latest content from Medium...</p>
 					</article>
 				</div>
 
@@ -493,6 +300,7 @@
 		<script src="assets/js/browser.min.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
+		<script src="assets/js/projects-data.js"></script>
 		<script src="assets/js/main.js"></script>
 
 	</body>
