--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 					<nav class="hero-nav">
 						<a href="#portfolio" class="nav-btn scrolly">Portfolio</a>
 						<a href="#blog" class="nav-btn scrolly">Blog</a>
-						<a href="#skills" class="nav-btn scrolly">Resume</a>
+						<a href="#skills" class="nav-btn scrolly">CV</a>
+						<a href="https://www.linkedin.com/in/bilal-haider-a5703a89/" class="nav-btn">LinkedIn</a>
 						<a href="#shriekinkraken" class="nav-btn nav-btn-highlighted scrolly">ShriekinKraken</a>
 					</nav>
 
@@ -129,11 +130,12 @@
 						<h3 class="skill-title">Languages & Frameworks</h3>
 						<ul class="skill-list">
 							<li>Kotlin</li>
-							<li>Java</li>
 							<li>Jetpack Compose</li>
-							<li>XML Views</li>
 							<li>Coroutines</li>
-							<li>Flow</li>
+							<li>XML Views</li>
+							<li>Retrofit</li>
+							<li>KTOR</li>
+							<li>Room</li>
 						</ul>
 					</div>
 
@@ -156,7 +158,6 @@
 							<li>MVI</li>
 							<li>Clean Architecture</li>
 							<li>Multi-module</li>
-							<li>Dependency Injection</li>
 						</ul>
 					</div>
 
@@ -207,7 +208,7 @@
 						<div class="stat-label">Apps Shipped</div>
 					</div>
 					<div class="stat">
-						<div class="stat-value">10M+</div>
+						<div class="stat-value">2M+</div>
 						<div class="stat-label">Users Reached</div>
 					</div>
 					<div class="stat">
@@ -217,8 +218,8 @@
 				</div>
 
 				<div class="section-cta fade-in">
-					<p class="resume-text">Want the full details? Download my complete resume.</p>
-					<a href="#" class="btn-gradient">
+					<p class="resume-text">Want the full details? Download my complete CV.</p>
+					<a href="assets/docs/cv.pdf" class="btn-gradient">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
 							<path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
 							<polyline points="7 10 12 15 17 10"></polyline>
